base repository added

--- a/src/DotNetBlog.Application/DotNetBlog.Application.csproj
+++ b/src/DotNetBlog.Application/DotNetBlog.Application.csproj
@@ -15,4 +15,8 @@
       <Folder Include="Handlers" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\DotNetBlog.Domain\DotNetBlog.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
