--- a/src/DotNetBlog.Application/DotNetBlog.Application.csproj
+++ b/src/DotNetBlog.Application/DotNetBlog.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.3.0" />
       <PackageReference Include="MediatR" Version="11.1.0" />
       <PackageReference Include="Result.Success" Version="1.1.1" />
     </ItemGroup>
