add some service registration and base components

--- a/src/DotNetBlog.Infrastructure/DotNetBlog.Infrastructure.csproj
+++ b/src/DotNetBlog.Infrastructure/DotNetBlog.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DotNetBlog.Application\DotNetBlog.Application.csproj" />
       <ProjectReference Include="..\DotNetBlog.Domain\DotNetBlog.Domain.csproj" />
     </ItemGroup>
 
