--- a/src/DotNetBlog.Web/DotNetBlog.Web.csproj
+++ b/src/DotNetBlog.Web/DotNetBlog.Web.csproj
@@ -15,6 +15,8 @@
 
     <ItemGroup>
       <PackageReference Include="MediatR" Version="11.1.0" />
+      <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
