some html polish and articles query

--- a/src/DotNetBlog.Web/appsettings.json
+++ b/src/DotNetBlog.Web/appsettings.json
@@ -2,8 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "Postgres": "User ID=root;Password=27072001;Host=localhost;Port=5432;Database=postgres;"
+  }
 }
